--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-10 23:52:04
+lastsearch = 2024-07-11 06:17:25
 
 [everonvn.com.vn]
 match = 7.4%%
@@ -18,8 +18,8 @@ url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPM19065
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19065.html
+title = Bộ chăn ga gối EVeron EPM19068
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
