--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-11 03:44:28
+lastsearch = 2024-07-11 06:12:38
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông Adaptive Fiber 3M
-url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
-match = -28.0%%
-title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+match = -48.0%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
@@ -37,9 +37,9 @@ title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
 url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
 
 [suongtuyet.com]
-match = -36.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -67,9 +67,9 @@ title = ️PHỤ KIỆN IDOL❤️ | LOMO CARD xinh thế này ...
 url = https://www.instagram.com/moji.idol/p/CzYvrbGvwS9/
 
 [www.facebook.com]
-match = -64.0%%
-title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm | An Dương District
-url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
+match = 0.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
+url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328&set=a.663634505792318&source=43
 
 [demviethome.vn]
 match = -36.0%%
