--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-11 04:27:10
+lastsearch = 2024-07-11 06:19:00
 
 [tuananh.vn]
 match = 8.0%%
@@ -32,8 +32,8 @@ title = nệm tuấn anh giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=nệm tuấn anh
 
 [demviethome.vn]
-match = -36.0%%
-title = Đệm bông ép Tuấn Anh Korea Gấm giá rẻ hà nội. ...
+match = -4.0%%
+title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
 url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [entershopping.vn]
