--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-11 02:50:39
+lastsearch = 2024-07-11 06:34:10
 
 [chieutruc.info]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = Sự phát triển của thai nhi tuần 18
 url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/su-phat-trien-cua-thai-nhi-tuan-18/
 
 [www.youtube.com]
-match = 9.1%%
-title = [HD] Chiếu cói Kim Sơn - Ninh Bình
-url = https://www.youtube.com/watch?v=3QOyWtlqmqg
+match = -109.1%%
+title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng ...
+url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
 match = 45.5%%
