--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-11 04:36:43
+lastsearch = 2024-07-11 06:28:53
 
 [demxanh.com]
 match = 25.9%%
@@ -12,9 +12,9 @@ title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
 url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 0.0%%
+title = chiếu điều hòa giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa
 
 [goni.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = 29.6%%
-title = Chiếu điều hòa cao su non 1m8x2m - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
+match = -37.0%%
+title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.dienmayxanh.com]
 match = -48.1%%
@@ -70,4 +70,9 @@ url = https://chieutrelanlan.com/chieu-dieu-hoa-kich-thuoc-140x190cm-51.html
 match = -18.5%%
 title = Chiếu Mây Điều Hòa Chiếu Điều Hoà Thông Hơi Cao Cấp ...
 url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-dieu-hoa-thong-hoi-cao-cap-du-kich-thuoc-mat-lanh-va-em-ai-i2221925576.html
+
+[h5.lazada.vn]
+match = -40.7%%
+title = Chiếu điều hòa mát lạnh ĐỦ SIZE loại dày, chiếu mây có ...
+url = https://h5.lazada.vn/products/chieu-dieu-hoa-mat-lanh-du-size-loai-day-chieu-may-co-the-gap-gon-giup-ngu-ngon-hon-i557242724.html
 
