--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-11 04:50:43
+lastsearch = 2024-07-11 06:31:53
 
 [screenrant.com]
 match = 0.0%%
@@ -82,14 +82,14 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Little green men
-url = https://en.wikipedia.org/wiki/Little_green_men
+match = -20.0%%
+title = Green card
+url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = -92.9%%
-title = Blue Eye Samurai (TV Series 2023)
-url = https://www.imdb.com/title/tt13309742/
+match = 7.1%%
+title = The Mask (1994)
+url = https://www.imdb.com/title/tt0110475/
 
 [www.boundless.com]
 match = -128.6%%
