--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-11 02:19:54
+lastsearch = 2024-07-11 06:30:58
 
 [shopee.vn]
-match = -61.9%%
-title = TẤM LÓT TRẢI GIƯỜNG SPA, PHUN XĂM DÙNG 1 LẦN ...
-url = https://shopee.vn/TẤM-LÓT-TRẢI-GIƯỜNG-SPA-PHUN-XĂM-DÙNG-1-LẦN-DÀY-DẶN-(-2-LOẠI-THOÁNG-KHÍ-CHỐNG-NƯỚC-CHỐNG-DẦU)-i.39985545.2514311987
+match = -57.1%%
+title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
+url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -37,9 +37,9 @@ title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường 
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
-match = -90.5%%
-title = Kích thước giường ngủ tiêu chuẩn, thông dụng nhất 2024
-url = https://comehome.com.vn/blog/post/kich-thuoc-giuong-ngu
+match = -119.0%%
+title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
+url = https://comehome.com.vn/blog/post/giuong-ngu-doi
 
 [www.kymdan.com]
 match = 14.3%%
