--- a/images/tui-warmdream-2-gap-180x200x12/config.ini
+++ b/images/tui-warmdream-2-gap-180x200x12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-2-gap-180x200x12.html
 lastopen = 2024-06-17 10:42:05
 
 [search]
-lastsearch = 2024-07-11 05:13:38
+lastsearch = 2024-07-11 06:27:57
 
 [www.diepxuan.com]
 match = 6.7%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/tui-warmdream-2-gap-180x200x12.html
 [www.amazon.com]
 match = -23.3%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/Tx3K8RH32NKVPNZ/
+url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
 
 [bwca.com]
 match = -20.0%%
@@ -27,12 +27,17 @@ title = Downsizing. Need Some Cabinet Advice.
 url = https://www.sevenstring.org/threads/downsizing-need-some-cabinet-advice.339597/
 
 [www.talkbass.com]
-match = -13.3%%
-title = Which lightweight cab is for me? | Page 3
-url = https://www.talkbass.com/threads/which-lightweight-cab-is-for-me.1442194/page-3
+match = -62.5%%
+title = GK Legacy Combos
+url = https://www.talkbass.com/threads/gk-legacy-combos.1423776/
 
 [www.youtube.com]
 match = -53.3%%
 title = Unigear Space Dome 2 Budget 2p Tent Setup and Initial ...
 url = https://www.youtube.com/watch?v=kuvfifz7ns4
+
+[unofficialwarmoth.com]
+match = -25.0%%
+title = Really FRFR | Page 2
+url = https://unofficialwarmoth.com/threads/really-frfr.26533/page-2
 
