--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-11 05:12:22
+lastsearch = 2024-07-11 06:32:47
 
 [www.lazada.vn]
 match = -55.6%%
@@ -202,9 +202,9 @@ title = Focus Single lever basin mixer 70 with bidette hand ...
 url = https://www.hansgrohe.com/articledetail-focus-single-lever-basin-mixer-70-with-bidette-hand-shower-and-shower-hose-160-cm-31926000
 
 [pro.hansgrohe.com]
-match = -155.6%%
-title = Talis E Shower mixers: 1 function, Chrome, Item No. ...
-url = https://pro.hansgrohe.com/articledetail-talis-e-single-lever-shower-mixer-for-concealed-installation-for-ibox-universal-71765000
+match = -138.9%%
+title = AXOR Universal Softsquare Shower door handle 444 mm
+url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
 
 [www.sciencedirect.com]
 match = -150.0%%
@@ -255,4 +255,9 @@ url = https://ntrs.nasa.gov/api/citations/19770009454/downloads/19770009454.pdf
 match = 0.0%%
 title = O %% NUY d:M~MN
 url = https://www.nrc.gov/docs/ML1922/ML19221A563.pdf
+
+[www.axor-design.com]
+match = -111.1%%
+title = 3-hole basin mixer 70 with push-open waste set
+url = https://www.axor-design.com/in/articledetail-axor-myedition-3-hole-basin-mixer-70-with-push-open-waste-set-47050000
 
