CI images update

--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-11 04:31:30
+lastsearch = 2024-07-11 06:47:23
 
 [www.gov.uk]
 match = -200.0%%
@@ -182,9 +182,9 @@ title = Premier League Football News, Fixtures, Scores & Results
 url = https://www.premierleague.com/
 
 [books.google.com]
-match = -226.7%%
-title = Disce Mori: Learne to Dye. A Religious Discourse, Mouing ...
-url = https://books.google.com/books?id=RUeyeITVGj8C&pg=PA321&lpg=PA321&dq=man+re+trang+16&source=bl&ots=OP_G8Zj0fI&sig=ACfU3U3W-RxMdyglwYBjxHxZn9LBJ0wevg&hl=en&sa=X&ved=2ahUKEwiv2f30tZ2HAxUwmIkEHVAkCAsQ6AF6BAgiEAM
+match = -233.3%%
+title = Evangeli Basun [weekly]. - Volume 6 - Google Books Result
+url = https://books.google.com/books?id=X58zAQAAMAAJ&pg=RA7-PP1&lpg=RA7-PP1&dq=man+re+trang+16&source=bl&ots=s1SNeA2ElH&sig=ACfU3U2IQ2fl47sAAViL4FtKOxxBt8Ad2g&hl=en&sa=X&ved=2ahUKEwjyzOqk1J2HAxVolokEHfueBIcQ6AF6BAhMEAM
 
 [www.nolo.com]
 match = 0.0%%
@@ -830,4 +830,9 @@ url = https://www.uspreventiveservicestaskforce.org/uspstf/recommendation/lung-c
 match = -100.0%%
 title = Condoms
 url = https://www.nhs.uk/contraception/methods-of-contraception/condoms/
+
+[www.boston25news.com]
+match = 7.1%%
+title = Boston 25 News
+url = https://www.boston25news.com/homepage
 
