--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-11 00:28:22
+lastsearch = 2024-07-11 06:44:47
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -340,4 +340,9 @@ url = http://publichealth.lacounty.gov/cms/docs/CHDPAssessorDirectory.pdf
 match = -5.0%%
 title = NTACT Evaluation Toolkit
 url = https://transitionta.org/wp-content/uploads/docs/toolkit_Evaluation.pdf
+
+[faculty.uci.edu]
+match = -140.0%%
+title = Nosratola D. Vaziri - UC Irvine - Faculty Profile System
+url = https://faculty.uci.edu/profile/?facultyId=2994
 
