--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-11 04:13:25
+lastsearch = 2024-07-11 06:49:01
 
 [everon.online]
 match = -12.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = 12.0%%
-title = Hội Mua Bán Chung Cư Giá Rẻ Hà Nội
-url = https://m.facebook.com/groups/3623003904436896/posts/26088814304095869/
+match = -80.0%%
+title = Chung cư Dolphin plaza - 28 Trần Bình ( số 6 Nguyễn ...
+url = https://m.facebook.com/groups/2283279178619853/posts/3705461809734909/
 
 [dantri.com.vn]
 match = -60.0%%
