--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-11 02:47:07
+lastsearch = 2024-07-11 06:53:10
 
 [www.tiktok.com]
 match = -170.6%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -217.6%%
 title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2illUys3-M&sig=ACfU3U3tA0r2nETl8rY8p7HXEG5_ie33gQ&hl=en&sa=X&ved=2ahUKEwiUhtLKnp2HAxVAEFkFHSwFB8wQ6AF6BAgYEAM
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2illUzx06E&sig=ACfU3U1j3YY1YveGdoXLsrrPMdgtzkjLhQ&hl=en&sa=X&ved=2ahUKEwiBtO7J1Z2HAxWil4kEHcWtAEwQ6AF6BAgWEAM
 
 [tax.vermont.gov]
 match = -29.4%%
