--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-11 04:18:55
+lastsearch = 2024-07-11 06:52:36
 
 [www.everonvn.vn]
-match = 31.1%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = 7.4%%
+title = ĐỆM LÒ XO EVERON, KING KOIL
+url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
 match = 29.8%%
@@ -47,9 +47,9 @@ title = Everon Quảng Bình Nệm lò xo Everon Bonnell 160x200x23
 url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-160x200x23.html
 
 [www.diepxuan.com]
-match = 41.5%%
-title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [everon.online]
 match = 38.3%%
