--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-11 02:46:12
+lastsearch = 2024-07-11 06:46:52
 
 [www.riotgames.com]
 match = -84.0%%
@@ -17,9 +17,9 @@ title = How to get a job in Korea as a non-Korean (again)
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -92.0%%
-title = Why North Korea’s dumping garbage on South Korea | About ...
-url = https://www.youtube.com/watch?v=SU3JMXEUtgg
+match = -25.0%%
+title = Korean VS German🇰🇷🇦🇹🇩🇪
+url = https://www.youtube.com/watch?v=MJWRS6eZ9YE
 
 [www.diepxuan.com]
 match = 60.0%%
@@ -77,9 +77,9 @@ title = DIR - 615 - Language change (Korean)
 url = http://forums.dlink.com/index.php?topic=2934.0
 
 [www.quora.com]
-match = 0.0%%
-title = 
-url = https://www.quora.com/Are-Koreans-allowed-to-marry-Africans-or-other-ethnicities
+match = -120.0%%
+title = I'm thinking of moving to Korea but I'm not fluent in Korean. ...
+url = https://www.quora.com/Im-thinking-of-moving-to-Korea-but-Im-not-fluent-in-Korean-What-is-the-easiest-way-to-learn-the-language-rapidly
 
 [m.facebook.com]
 match = -108.0%%
