--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-11 04:48:36
+lastsearch = 2024-07-11 06:53:23
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 100.0%%
+title = Thảm giường II 160x200
+url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -42,8 +42,8 @@ title = Thảm chân giường
 url = https://www.thamvintage.vn/collections/tham-chan-giuong
 
 [cafeland.vn]
-match = -72.7%%
-title = 5 loại thảm trải giường hot nhất hiện nay - Cafeland
+match = -100.0%%
+title = 5 loại thảm trải giường hot nhất hiện nay 2022 - CafeLand.Vn
 url = https://cafeland.vn/xu-huong/5-loai-tham-trai-giuong-hot-nhat-hien-nay-112172.html
 
 [noithatviva.vn]
