--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-11 03:34:48
+lastsearch = 2024-07-11 06:47:56
 
 [gobearcats.com]
 match = -142.1%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = 0.0%%
-title = Citation listings - GEO
-url = https://www.ncbi.nlm.nih.gov/geo/info/citations.html
+match = -84.2%%
+title = Vancomycin Resistance in Enterococcus and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9866002/
 
 [www.ucdavis.edu]
 match = -52.6%%
