CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-11 05:55:19
+lastsearch = 2024-07-11 08:00:52
 
 [shopee.vn]
 match = -8.0%%
@@ -212,9 +212,9 @@ title = Kết quả sản xuất vụ đông xuân năm 2024
 url = https://www.gso.gov.vn/du-lieu-va-so-lieu-thong-ke/2024/07/ket-qua-san-xuat-vu-dong-xuan-nam-2024/
 
 [znews.vn]
-match = -4.0%%
-title = Tin tức tức online 24h về Ten lua
-url = https://znews.vn/Ten-lua-tin-tuc/trang229.html?type=2
+match = -64.0%%
+title = Trò gắp thú bùng nổ ở Đài Loan giữa lúc kinh tế suy thoái
+url = https://znews.vn/tro-gap-thu-bung-no-o-dai-loan-giua-luc-kinh-te-suy-thoai-post900642.html
 
 [vnexpress.net]
 match = -37.5%%
