--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-11 04:44:51
+lastsearch = 2024-07-11 07:56:49
 
 [quizlet.com]
 match = -170.0%%
@@ -72,8 +72,8 @@ title = Ren
 url = https://www.youtube.com/channel/UCqq3VcwPGseErHUa0-xLInQ
 
 [www.va.gov]
-match = -230.0%%
-title = VA Survivors Pension | Veterans Affairs
+match = -210.0%%
+title = Survivors Pension | Veterans Affairs
 url = https://www.va.gov/pension/survivors-pension/
 
 [excalibur.mgmresorts.com]
@@ -122,9 +122,9 @@ title =
 url = https://www.reddit.com/r/makinghiphop/comments/1xxaoc/what_is_16_bars_really/
 
 [cca.hawaii.gov]
-match = -120.0%%
-title = chapter 84 massage therapy
-url = https://cca.hawaii.gov/pvl/files/2013/08/har_84-c2.pdf
+match = -300.0%%
+title = Hawaii Administrative Rules Title 16 Chapter 115
+url = https://cca.hawaii.gov/pvl/files/2013/08/har_115-c1.pdf
 
 [www.uscis.gov]
 match = -430.0%%
