--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-11 00:51:34
+lastsearch = 2024-07-11 07:57:37
 
 [changagoidemsonghong.com]
 match = 18.5%%
@@ -117,9 +117,9 @@ title = Cotton S (CTS) - Koala
 url = https://koala.vn/chan-ga-goi/koala-cts
 
 [cuahangchangagoidem.com]
-match = -40.7%%
-title = Chăn Ga Gối Đệm Cotton Giá Tốt Được Yêu Thích Nhất 2024
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cotton-dep/
+match = -25.9%%
+title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [spacet.vn]
 match = -33.3%%
