--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-11 04:50:54
+lastsearch = 2024-07-11 07:57:25
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = 17.6%%
-title = iKON - 'I'M OK' M/V
-url = https://www.youtube.com/watch?v=yqszm7AnX-4
+match = -200.0%%
+title = DAILY UPLOADS DAY 1 JFJFJFJF #music #fortnite #ukulele ...
+url = https://www.youtube.com/watch?v=SfhTqo-KgkQ
 
 [www.tiktok.com]
 match = 20.0%%
