--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-11 04:27:55
+lastsearch = 2024-07-11 08:05:13
 
 [www.bible.com]
-match = -105.9%%
-title = EXODUS 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/EXO.22.MIZCLBSI
+match = 23.1%%
+title = sawltak 20:22
+url = https://www.bible.com/bible/368/ACT.20.22.TDB
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -17.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -77,9 +77,9 @@ title = Anggun
 url = https://en.wikipedia.org/wiki/Anggun
 
 [www.instagram.com]
-match = -88.2%%
-title = angel_lina_paul - Angelina VL Hriatpuii
-url = https://www.instagram.com/angel_lina_paul/?hl=en
+match = -182.4%%
+title = Gisele Bündchen (@gisele) • Instagram photos and videos
+url = https://www.instagram.com/gisele/?hl=en
 
 [www.jw.org]
 match = -152.9%%
