--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-07-11 04:49:51
+lastsearch = 2024-07-11 08:03:37
 
 [shope.io.vn]
 match = -59.3%%
@@ -35,4 +35,9 @@ url = https://www.thefedoralounge.com/threads/the-roll-up-panama-optimo-colonial
 match = 16.0%%
 title = Cartridges for ARO + LP12
 url = https://forums.naimaudio.com/topic.php?p=2&oid=1566878605753894&coid=159503632588889
+
+[shopee.vn]
+match = 7.4%%
+title = ruột gối hơi cao cấp mẫu hoa trà 45x65cm
+url = https://shopee.vn/ruột-gối-hơi-cao-cấp-mẫu-hoa-trà-45x65cm-i.341290655.22340272262
 
