--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-11 03:33:50
+lastsearch = 2024-07-11 08:02:23
 
 [www.tui.co.uk]
 match = -153.3%%
@@ -130,4 +130,9 @@ url = https://www.aeroroutes.com/eng/230410-tomsin
 match = -140.0%%
 title = TUI FIRST PASSENGER FLIGHT TO SINGAPORE TAKES ...
 url = https://www.birminghamairport.co.uk/media-information/news/2023/12/tui-first-passenger-flight-to-singapore-takes-off-from-birmingham-airport/
+
+[www.skyscanner.net]
+match = -20.0%%
+title = Book TUI Flights to Singapore
+url = https://www.skyscanner.net/flights/airline-flights-to-city/sins/tui-tom/cheap-flights-with-tui-tom-flights-to-singapore
 
