--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-11 06:31:42
+lastsearch = 2024-07-11 09:09:07
 
 [www.diepxuan.com]
 match = 10.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
 match = 70.0%%
@@ -67,7 +67,7 @@ title = Pallet Nhựa giá rẻ tại Hà Nội, Các địa chỉ mua bán ...
 url = https://xenanghanoi.com/pallet-nhua-cu-sieu-tai-644120.html
 
 [m.facebook.com]
-match = -80.0%%
-title = CHỢ YÊN-TIỀN PHONG-MÊ LINH-HÀ NỘI | CHIẾU NHỰA ...
-url = https://m.facebook.com/groups/2940927696228038/posts/3825974731056659/
+match = -15.0%%
+title = Chiếu nhựa gấp e về sẵn kho sll bác nhá
+url = https://m.facebook.com/groups/2835117866769344/posts/3779485412332580/
 
