--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-11 08:04:13
+lastsearch = 2024-07-11 09:10:54
 
 [burningman.org]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = http://desaulnier.house.gov/
 [account.microsoft.com]
 match = -226.7%%
 title = Microsoft account | Sign In or Create Your Account Today ...
-url = https://account.microsoft.com/account/Account
+url = https://account.microsoft.com/account/manage-my-account
 
 [www.regmovies.com]
 match = -113.3%%
@@ -154,7 +154,7 @@ url = https://boardofwatersupply.com/appjqsYgH7155
 [steamcommunity.com]
 match = -53.3%%
 title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=10
+url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
 
 [register.fca.org.uk]
 match = -6.7%%
@@ -675,4 +675,9 @@ url = https://uci.edu/
 match = -246.7%%
 title = Del Frisco's Double Eagle Steakhouse | Expect Extraordinary
 url = https://www.delfriscos.com/
+
+[www.hollisterco.com]
+match = -213.3%%
+title = Clothing for Women & Men | Teen Clothing | Hollister Co.
+url = https://www.hollisterco.com/shop/us
 
