--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-11 07:59:46
+lastsearch = 2024-07-11 09:02:50
 
 [demxanh.com]
 match = -41.2%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -117.6%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
+match = -105.9%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
 
 [www.lazada.vn]
 match = -152.9%%
@@ -27,14 +27,14 @@ title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trư
 url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [sammas.vn]
-match = -105.9%%
-title = Thảm lì ép Hàn Quốc (M9 hoa xanh) - STHA0002
-url = https://sammas.vn/copy-of-tham-li-ep-han-quoc-stha0001
+match = -52.9%%
+title = Thảm lì ép Hàn Quốc (M16) - STHA0016
+url = https://sammas.vn/tham-li-ep-han-quoc-m16-stha0016
 
 [shopee.vn]
-match = -205.9%%
-title = Thảm trải sàn nỉ lì Bali 3D phong cách hoàng gia trang trí ...
-url = https://shopee.vn/Thảm-trải-sàn-nỉ-lì-Bali-3D-phong-cách-hoàng-gia-trang-trí-phòng-khách-đế-chống-trượt-kích-thước-2mx3m-i.232243944.9715526544
+match = -135.3%%
+title = thảm trải sàn bali giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải sàn bali
 
 [vn.my-best.com]
 match = -176.5%%
