--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-11 06:31:53
+lastsearch = 2024-07-11 10:37:47
 
 [screenrant.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
-url = https://www.uscis.gov/forms/explore-my-options
+match = -64.3%%
+title = I am Married to a U.S. Citizen
+url = https://www.uscis.gov/citizenship/learn-about-citizenship/citizenship-and-naturalization/i-am-married-to-a-us-citizen
 
 [www.evergreenrecreation.com]
 match = -21.4%%
@@ -380,4 +380,9 @@ url = https://www.bernzomatic.com/appihamo/53yBB.xml
 match = -178.6%%
 title = A Whopping 91 Percent of Plastic Isn't Recycled
 url = https://education.nationalgeographic.org/resource/whopping-91-percent-plastic-isnt-recycled/
+
+[www.huntinfool.com]
+match = -7.1%%
+title = The Old Man's 10%% Rule
+url = https://www.huntinfool.com/articles/topic/diy/the-old-mans-10-rule
 
