--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-11 10:18:14
+lastsearch = 2024-07-11 10:40:35
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=1zJIopY7o00
 [books.google.com]
 match = -81.2%%
 title = Tam tu kinh: - Google Books Result
-url = https://books.google.com/books?id=6LwwAQAAMAAJ&pg=PP378&lpg=PP378&dq=chieu+lac+soc+16&source=bl&ots=hpvxLsyaQ-&sig=ACfU3U3iGGB3mYCBsb69IpLZE43ddQalGg&hl=en&sa=X&ved=2ahUKEwjZ5Yu1g56HAxWyFmIAHVUWBCAQ6AF6BAgbEAM
+url = https://books.google.com/books?id=6LwwAQAAMAAJ&pg=PP378&lpg=PP378&dq=chieu+lac+soc+16&source=bl&ots=hpvxLsA4K0&sig=ACfU3U3ngGDcrN82ftKTvsoIdJ5qpTkoXA&hl=en&sa=X&ved=2ahUKEwj-tra0iJ6HAxV_LtAFHfzuA4cQ6AF6BAgdEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
