--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-11 05:12:02
+lastsearch = 2024-07-11 10:32:27
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -22,9 +22,9 @@ title = Ga phủ ES1804 160x200
 url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 
 [muathongminh.vn]
-match = -119.0%%
-title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
-url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
+match = -95.2%%
+title = Giảm giá Bộ chăn ga gối phủ trần bông 7 món satin
+url = https://muathongminh.vn/bo-chan-ga-goi-phu-tran-bong-7-mon-satin-p.1__7848970894__300618428
 
 [beecost.vn]
 match = -61.9%%
