--- a/images/nem-diamold-re-200x220x09/config.ini
+++ b/images/nem-diamold-re-200x220x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamold-re-200x220x09.html
 lastopen = 2024-06-10 11:11:36
 
 [search]
-lastsearch = 2024-07-11 06:34:22
+lastsearch = 2024-07-11 10:33:31
 
 [www.youtube.com]
 match = -104.0%%
@@ -80,4 +80,9 @@ url = https://www.candlepowerforums.com/threads/1076-9-otf-lumens-5-4a-sst-90-2-
 match = -5.0%%
 title = R.I.P Uddeholm 15N20
 url = https://www.bladeforums.com/threads/r-i-p-uddeholm-15n20.1014229/
+
+[thebackshed.org]
+match = -4.3%%
+title = TheBackShed.com - Forum
+url = https://thebackshed.org/forum/ViewTopic_mobile.php?TID=8542&P=7
 
