--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-10 21:12:07
+lastsearch = 2024-07-11 10:31:53
 
 [shopee.vn]
 match = -216.7%%
@@ -44,7 +44,7 @@ url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 [tiki.vn]
 match = -200.0%%
 title = Nệm ghế,Thảm ghế gỗ loại 1m7x 55cm mẫu màu nâu
-url = https://tiki.vn/nem-ghe-tham-ghe-go-loai-1m7x-55cm-mau-mau-nau-p89638643.html?spid=141114686
+url = https://tiki.vn/nem-ghe-tham-ghe-go-loai-1m7x-55cm-mau-mau-nau-p89638643.html?spid=155022353
 
 [suongtuyet.com]
 match = -125.0%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -116.7%%
-title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
-url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
+match = -266.7%%
+title = Thảm ghế 2m2 x 55cm nệm lót ghế gỗ hoàng gia đỏ kích ...
+url = https://www.lazada.vn/products/tham-ghe-2m2-x-55cm-nem-lot-ghe-go-hoang-gia-do-kich-thuoc-co-dai-2m2-x-55cm-gom-1-tam-dai-va-2-tam-ngan-i902914335.html
 
 [vn.my-best.com]
 match = -233.3%%
