--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-11 09:03:58
+lastsearch = 2024-07-11 10:37:56
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,8 +12,8 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -144.4%%
-title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được ...
+match = -172.2%%
+title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được chọn ...
 url = https://www.lazada.vn/products/ready-vo-goi-nam-vo-goi-dau-kich-thuoc-45x65-duoc-chon-mau-i2364886208.html
 
 [www.reddit.com]
@@ -32,13 +32,13 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = -5.6%%
-title = Vỏ gối EP1823 BEARS 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ep1823-bears-45x65.html
+match = 11.1%%
+title = Điệp Xuân Vỏ gối ES1801 45x65
+url = https://www.diepxuan.com/vo-goi-es1801-45x65.html
 
 [www.everonqb.com]
-match = -105.6%%
-title = Vỏ gối EP1823 BEARS 45x65 - Everon Quảng Bình Trang Chủ
+match = -38.9%%
+title = Everon Quảng Bình Vỏ gối EP1823 BEARS 45x65
 url = https://www.everonqb.com/vo-goi-ep1823-bears-45x65.html
 
 [shopee.vn]
@@ -52,7 +52,7 @@ title = Vỏ gối nằm được bán bởi công ty Lidaco Official Store
 url = https://sieuthicholon.com/vo-goi-nam-23484/?cong-ty=lidaco-official-store
 
 [dienmayhc.com]
-match = -88.9%%
-title = Vỏ gối nằm được bán bởi PHUCTHAI CHĂN GA GỐI
+match = -166.7%%
+title = Vỏ gối nằm được bán bởi người bán PHUCTHAI CHĂN GA GỐI ...
 url = https://dienmayhc.com/vo-goi-nam-23452/?nguoi-ban=phucthai-chan-ga-goi
 
