--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-11 10:40:46
+lastsearch = 2024-07-11 11:21:36
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -26.7%%
+title = Du học Hàn Quốc - ANIDO
+url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
 
 [hoc247.vn]
 match = -213.3%%
@@ -310,4 +310,9 @@ url = https://olm.vn/cau-hoi/mot-con-lac-don-co-m-200-g-chieu-dai-l-40-cm-keo-va
 match = -253.3%%
 title = Câu lạc bộ Bóng đá: “Sáng lên giảng đường, chiều ra sân bóng”
 url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-bong-da-sang-len-giang-duong--chieu-ra-san-bong.html
+
+[concung.com]
+match = -220.0%%
+title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
+url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
