--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-11 06:32:58
+lastsearch = 2024-07-11 11:17:32
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -87.5%%
-title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
-url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENOZW12YD&sig=ACfU3U0nFUbV8boyc4WWNqPDa1EU8Z6J8g&hl=en&sa=X&ved=2ahUKEwir4JOI0Z2HAxW6v4kEHX5ADykQ6AF6BAgYEAM
+match = -218.8%%
+title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu5WW9BVi&sig=ACfU3U0v8uCwJXeScqwEJi7hFofSIAw0gg&hl=en&sa=X&ved=2ahUKEwi4y-LVkJ6HAxX1g4kEHZkADJMQ6AF6BAgeEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
