--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-11 05:13:19
+lastsearch = 2024-07-11 11:21:47
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -17,8 +17,8 @@ title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [chieutrelanlan.com]
-match = 3.6%%
-title = Chiếu trúc cao cấp Việt Nam thương hiệu Lan Lan
+match = 25.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
 url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [demxanh.com]
