--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-11 01:25:33
+lastsearch = 2024-07-11 11:37:07
 
 [www.lazada.vn]
-match = -180.0%%
-title = (CIYS)vỏ Gối In Hình Cờ Úc Hoa Kỳ Vỏ Gối Vải Nhung ...
-url = https://www.lazada.vn/products/ciysvo-goi-in-hinh-co-uc-hoa-ky-vo-goi-vai-nhung-long-ngan-sieu-mem-vo-goi-ke-45x45-vo-goi-trang-tri-noi-that-sofa-i2001355874.html
+match = -166.7%%
+title = Vỏ gối vuông tựa cỡ 45x45cm in sắt nét (Không kèm ruột)
+url = https://www.lazada.vn/products/vo-goi-vuong-tua-co-45x45cm-in-sat-net-khong-kem-ruot-i995000529.html
 
 [shopee.vn]
 match = -140.0%%
-title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
-url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
+title = Vỏ gối vuông tựa Tây Âu 48cmx48cm vải gấm nhung ...
+url = https://shopee.vn/Vỏ-gối-vuông-tựa-Tây-Âu-48cmx48cm-vải-gấm-nhung-gối-tựa-lưng-sofa-vỏ-gối-ôm-gối-vuông-trang-trí-decor-sang-trọng-i.18055727.2459433258
 
 [jysk.vn]
 match = -166.7%%
