--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-11 10:53:01
+lastsearch = 2024-07-11 11:41:28
 
 [burningman.org]
 match = 0.0%%
@@ -292,9 +292,9 @@ title = Theory Official Site | Contemporary Clothing for Women and ...
 url = https://www.theory.com/
 
 [www.dell.com]
-match = 0.0%%
-title = 
-url = https://www.dell.com/support/kbdoc/en-us/000102564/how-to-perform-a-clean-boot-in-windows-10-to-troubleshoot-software-conflicts
+match = -6.7%%
+title = Drivers & Downloads
+url = https://www.dell.com/support/home/en-vn?app=drivers
 
 [www.ae.com]
 match = -173.3%%
@@ -680,4 +680,9 @@ url = https://www.delfriscos.com/
 match = -213.3%%
 title = Clothing for Women & Men | Teen Clothing | Hollister Co.
 url = https://www.hollisterco.com/shop/us
+
+[support.apple.com]
+match = -13.3%%
+title = How to reinstall macOS
+url = https://support.apple.com/en-us/102655
 
