--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-11 09:46:19
+lastsearch = 2024-07-11 11:34:51
 
 [erado.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Giường ngủ da hạng sang mã 18
 url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
-match = -95.0%%
-title = BỘ 18 NÚT NHỰA 4 BULONG ĐAI ỐC & 4 ĐINH TÁN LẮP ...
-url = https://shopee.vn/BỘ-18-NÚT-NHỰA-4-BULONG-ĐAI-ỐC-4-ĐINH-TÁN-LẮP-RÁP-GIƯỜNG-XẾP-NHÔM-US-i.54145193.19983087036
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [h5.lazada.vn]
 match = -5.0%%
