--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-11 04:14:10
+lastsearch = 2024-07-11 11:35:34
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,8 +17,8 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
+match = -316.7%%
+title = The one of the world's leading tourism groups - TUI Group
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
@@ -107,9 +107,9 @@ title = Tag: TUI Group
 url = https://www.ttgasia.com/tag/tui-group/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = 36.4%%
+title = tui sitemap
+url = https://www.tui.co.uk/sitemap
 
 [maritime-executive.com]
 match = -316.7%%
@@ -153,7 +153,7 @@ url = https://www.trivago.be/fr-BE/oar/hôtel-tui-magic-life-bodrum-adults-only-
 
 [mittotui.com]
 match = -16.7%%
-title = BÁNH KEM MẪU KOREA - 16
+title = BÁNH KEM MẪU KOREA
 url = https://mittotui.com/banh-kem-mau-korea-16
 
 [scribblergear.com]
@@ -367,8 +367,8 @@ title = The official Hermes online store | Hermès USA
 url = https://www.hermes.com/us/en/
 
 [ca.trip.com]
-match = -141.7%%
-title = Tui Magic Life Rixos Beldibi +16, 2024
+match = -191.7%%
+title = Tui Magic Life Rixos Beldibi +16, 2024 | ...
 url = https://ca.trip.com/hotels/goynuk-mahallesi-hotel-detail-3445108/tui-magic-life-rixos-beldibi-16/
 
 [barutblueandiz.otel.direct]
