CI images update

--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-11 06:30:47
+lastsearch = 2024-07-11 12:18:22
 
 [everon.vip]
 match = -10.0%%
@@ -115,4 +115,9 @@ url = https://everonkorea.com/everon/
 match = -33.3%%
 title = Đệm Cao Su Non Kim Cương JADEITONE
 url = https://thegioidemviet.vn/nem-cao-su-non-jadeitone-kim-cuong/
+
+[akasi.com.vn]
+match = -81.0%%
+title = ĐỆM BÔNG ÉP CAO SU KIM CƯƠNG TITANIUM - Akasi
+url = https://akasi.com.vn/san-pham/dem-bong-ep-cao-su-kim-cuong-titanium/
 
