--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-11 08:04:22
+lastsearch = 2024-07-11 12:18:33
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
 url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Điệp Xuân Bộ chăn bốn mùa màu 160x200
-url = https://www.diepxuan.com/bo-chan-bon-mua-mau-160x200.html
+match = -17.9%%
+title = Bộ chun chần WarmDream 160x200 lụa - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-160x200-lua.html
 
 [demxanh.com]
 match = -32.1%%
