--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-11 11:20:08
+lastsearch = 2024-07-11 12:12:59
 
 [changagoidemsonghong.com]
-match = 18.5%%
-title = chăn ga gối cotton cao cấp Archives
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
+match = 22.2%%
+title = Chăn ga gối Urban cao cấp mã UC22-016
+url = https://changagoidemsonghong.com/chan-ga-goi-uc016
 
 [demhong.vn]
 match = 11.1%%
@@ -132,9 +132,9 @@ title = Bộ Chăn Ga Gối Cotton Hàn Quốc CHQ-056
 url = https://suongtuyet.com/bo-drap-cotton-han-quoc-chq-056
 
 [songhong.info]
-match = 7.4%%
-title = Chăn ga gối dòng Basic 100%% cotton mã BC-41
-url = https://songhong.info/chan-ga-goi-bc41
+match = 22.2%%
+title = Chăn ga gối Urban cao cấp mã UC22-016
+url = https://songhong.info/chan-ga-goi-uc016
 
 [daddecor.vn]
 match = 25.9%%
@@ -160,4 +160,9 @@ url = https://elmichsleep.vn/chan-ga-goi
 match = -37.0%%
 title = bộ cotton living - Hệ thống siêu thị chăn ga gối nệm
 url = https://khodemgiagoc.com/bo-cotton-living
+
+[changagoidemphuongbac.com]
+match = 7.4%%
+title = Bộ chăn ga gối cao cấp Sông Hồng Urban UC24-102
+url = https://changagoidemphuongbac.com/bo-chan-ga-goi-cao-cap-song-hong-urban-uc24-102/
 
