--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-11 11:19:17
+lastsearch = 2024-07-11 12:13:10
 
 [dongagroup.vn]
 match = -272.7%%
@@ -92,9 +92,9 @@ title = Giường 1m2 x 2m hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
-match = -281.8%%
-title = Có bán Giường & khung giường đơn tiêu chuẩn tại ...
-url = https://www.facebook.com/marketplace/mankato/full-size-beds/?locale=vi_VN
+match = -318.2%%
+title = Có bán Khung giường bằng kim loại tại Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/metal-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
