--- a/images/nem-dreamland-uc-200x200x09/config.ini
+++ b/images/nem-dreamland-uc-200x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-200x200x09.html
 lastopen = 2024-06-07 01:35:16
 
 [search]
-lastsearch = 2024-07-11 07:56:39
+lastsearch = 2024-07-11 12:37:37
 
 [www.diepxuan.com]
 match = 55.6%%
@@ -45,4 +45,14 @@ url = https://m.facebook.com/groups/maslowcnc/permalink/661807767555526/
 match = -74.1%%
 title = TsNIITOCHMASH of Russia Announces They Plan To Start ...
 url = https://forum.cartridgecollectors.org/t/tsniitochmash-of-russia-announces-they-plan-to-start-production-of-9x19mm-marker-cartridges-in-2020/33335/18
+
+[www.audiocircle.com]
+match = -18.5%%
+title = Merlin Music VSM - Crossover Upgrade
+url = https://www.audiocircle.com/index.php?topic=187750.20
+
+[m.youtube.com]
+match = -96.3%%
+title = X-Plane 11 | Magknight 787-9 v1.1 | The 787-9 Down Under ...
+url = https://m.youtube.com/watch?v=6Usm_fhKZiI
 
