--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-11 09:11:17
+lastsearch = 2024-07-11 12:33:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = 7.7%%
-title = Bộ chăn ga gối nỉ nhung sữa cao cấp, Set ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-nỉ-nhung-sữa-cao-cấp-Set-chăn-ga-gối-nỉ-nhung-4-món-đủ-kích-thước-i.477175029.18561885316
+match = -42.3%%
+title = Bộ chăn ga gối 5 món chăn phao trần bông dày siêu nhẹ ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-5-món-chăn-phao-trần-bông-dày-siêu-nhẹ-cao-cấp-không-cần-lồng-vỏ-tiện-lợi-i.256686586.9136448059
 
 [bedding.vn]
 match = -42.3%%
