--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-11 06:53:10
+lastsearch = 2024-07-11 12:30:38
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2illUzx06E&sig=ACfU3U1j3YY1YveGdoXLsrrPMdgtzkjLhQ&hl=en&sa=X&ved=2ahUKEwiBtO7J1Z2HAxWil4kEHcWtAEwQ6AF6BAgWEAM
+match = -176.5%%
+title = Official Army Register - Page 356 - Google Books Result
+url = https://books.google.com/books?id=TOYsAAAAIAAJ&pg=RA1-PA356&lpg=RA1-PA356&dq=man+in+hoa+dep+16&source=bl&ots=m4CdPwJgI_&sig=ACfU3U0fRuhmdDoIYA72cZnFBgHS-E-HSA&hl=en&sa=X&ved=2ahUKEwjBjZWBoZ6HAxWirYkEHeZCAUgQ6AF6BAgoEAM
 
 [tax.vermont.gov]
 match = -29.4%%
