--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-11 11:35:34
+lastsearch = 2024-07-11 12:38:46
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,8 +17,8 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -316.7%%
-title = The one of the world's leading tourism groups - TUI Group
+match = -300.0%%
+title = TUI Group – The one of the world's leading tourism groups
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
@@ -107,9 +107,9 @@ title = Tag: TUI Group
 url = https://www.ttgasia.com/tag/tui-group/
 
 [www.tui.co.uk]
-match = 36.4%%
-title = tui sitemap
-url = https://www.tui.co.uk/sitemap
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [maritime-executive.com]
 match = -316.7%%
@@ -385,4 +385,9 @@ url = https://www.tripadvisor.com/ShowUserReviews-g499445-d1163247-r941540096-Ba
 match = -283.3%%
 title = NEW!!! Wings of Fire Series Complete 16 Books Set ...
 url = https://www.amazon.com/NEW-Wings-Fire-Complete-Books/dp/B09XFLHC2S
+
+[www.teddyblake.com]
+match = -358.3%%
+title = Teddy Blake: Luxury Designer Bags, 100%% Made In Italy, Fair ...
+url = https://www.teddyblake.com/
 
