--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-11 05:16:06
+lastsearch = 2024-07-11 12:36:54
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -81.2%%
-title = #beautytok #blush #newproduct @Huda
-url = https://www.tiktok.com/@hudabeauty/video/7376703844530588970
+match = -231.2%%
+title = Reverse Corrector #beautytok #makeuphacks #colorcorection ...
+url = https://www.tiktok.com/@hudabeauty/video/7378924653521177898
 
 [archiveofourown.org]
 match = -137.5%%
@@ -110,4 +110,9 @@ url = https://www.quilterscupboard.com/shop/Fabric/p/Winter-Dreams-90844M-14-x81
 match = -206.2%%
 title = Tu 💫 | The @trendtvision Pop-Up World Tour is officially ...
 url = https://www.instagram.com/tutran2000/p/C6CHk9WK8l4/
+
+[www.lemon8-app.com]
+match = -118.8%%
+title = Personal Color🖍️ | Bộ sưu tập do Annie🥦 đăng
+url = https://www.lemon8-app.com/an_nie/7208139846819316225?region=vn
 
