--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-11 12:12:59
+lastsearch = 2024-07-11 12:49:19
 
 [changagoidemsonghong.com]
-match = 22.2%%
-title = Chăn ga gối Urban cao cấp mã UC22-016
-url = https://changagoidemsonghong.com/chan-ga-goi-uc016
+match = 18.5%%
+title = chăn ga gối cotton cao cấp Archives
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
 
 [demhong.vn]
 match = 11.1%%
