--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-11 05:30:23
+lastsearch = 2024-07-11 12:47:16
 
 [hoa18.com]
 match = -84.2%%
@@ -22,9 +22,9 @@ title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
 url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
 
 [www.facebook.com]
-match = -110.5%%
-title = Bóng đèn Eurosuper - 🎄 TRANG HOÀNG GIÁNG SINH ...
-url = https://www.facebook.com/photo.php?fbid=741433624679263&set=a.636087441880549&type=3&locale=en_GB
+match = 22.2%%
+title = Hồi Sinh Ngọc Rồng
+url = https://www.facebook.com/hoisinhngocrong/
 
 [vietnambiz.vn]
 match = -147.4%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -152.6%%
-title = 6 tháng đầu năm, Việt Nam nhập siêu từ Trung Quốc chạm ...
-url = https://trithucvn.co/kinh-te/6-thang-dau-nam-viet-nam-nhap-sieu-tu-trung-quoc-cham-moc-40-ty-usd.html
+match = -142.1%%
+title = Ông Trump thách thức ông Biden tranh biện mở và đấu golf
+url = https://trithucvn.co/the-gioi/ong-trump-thach-thuc-ong-biden-tranh-bien-mo-va-dau-golf.html
 
 [bptv.vn]
 match = -57.9%%
