--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-11 10:48:02
+lastsearch = 2024-07-11 13:16:42
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -32,9 +32,9 @@ title = Bộ Ga Gối Màu Trơn Giá Tốt T03/2024
 url = https://www.lazada.vn/tag/bo-ga-goi-mau-tron/?page=2
 
 [www.instagram.com]
-match = 4.5%%
-title = 𝔹𝕦̀𝕟𝕘 𝕟𝕠̂̉ 𝕤𝕚𝕖̂𝕦 𝕡𝕙𝕒̂̉𝕞 ℂ𝕙𝕒𝕟𝕖 ℂ𝕠𝕔𝕠 𝟚𝟘𝟚𝟛 🔝V
-url = https://www.instagram.com/chomchomchangagoi/p/Crd1DC4pqMk/
+match = -100.0%%
+title = 𝗖𝗛𝗔𝗥𝗟𝗢𝗡𝗘 𝗔𝗡𝗗 𝗖𝗢𝗖𝗢 𝗙𝗨𝗧𝗨𝗥𝗘. HM01. 💚 Mã Phi lụa 1 màu ...
+url = https://www.instagram.com/p/C7hH3TevMho/
 
 [h5.lazada.vn]
 match = -40.9%%
