--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-11 12:31:46
+lastsearch = 2024-07-11 13:18:31
 
 [demxanh.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
 url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [tiki.vn]
-match = -60.9%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm màu 08
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-mau-08-p33115723.html
+match = -47.8%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=71118855/
 
 [thegioidemviet.vn]
 match = -65.2%%
@@ -32,9 +32,9 @@ title = Thảm nhung Bali 160x230
 url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 
 [shopee.vn]
-match = -117.4%%
-title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
-url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
+match = -69.6%%
+title = thảm trải sàn bali giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải sàn bali
 
 [www.noithatpassion.com]
 match = -73.9%%
@@ -100,4 +100,9 @@ url = https://www.facebook.com/groups/3110526229041231/questions/?locale=vi_VN
 match = -30.4%%
 title = Sắc màu mùa hạ cho phòng khách tươi mới
 url = https://dev.nhaxinh.com/sac-mau-mua-ha-cho-phong-khach-tuoi-moi/
+
+[www.youtube.com]
+match = -21.4%%
+title = 5 days in Bali
+url = https://www.youtube.com/watch?v=JNgo_ezn-S8
 
