--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-11 13:17:37
+lastsearch = 2024-07-11 13:51:39
 
 [tiki.vn]
 match = -138.9%%
@@ -33,8 +33,8 @@ url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
 match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 753 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-753-chinh-hang-cao-cap
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 705 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-705-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = -38.9%%
-title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
-url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
+match = -33.3%%
+title = Bộ Chăn Ga Gối Modal Cotton MC13
+url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
 
 [www.mym.com.vn]
 match = -57.1%%
@@ -97,9 +97,9 @@ title = Bộ Phủ L'amour Living LV10
 url = https://demviethome.vn/bo-phu-lamour-living-lv10/
 
 [leflair.com]
-match = -66.7%%
-title = Bộ Drap & Chăn Chần Cotton 160x200 (5 Món)...
-url = https://leflair.com/en/shop/bo-drap-chan-chan-cotton-160x200-5-mon-15916
+match = -61.1%%
+title = Bộ Drap & Vỏ Chăn Cotton 160x200 (5 Món)...
+url = https://leflair.com/en/shop/delete-bo-drap-vo-chan-cotton-160x200-5-mon-3285
 
 [ninhouse.vn]
 match = -161.1%%
