--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-11 12:32:40
+lastsearch = 2024-07-11 13:47:49
 
 [shopee.vn]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -168.4%%
-title = Chiều nay em đi câu cá, con cua, nhạc thiếu nhi vui nhộn, quả ...
-url = https://www.youtube.com/watch?v=6ZKWF1hxUeE
+match = -115.8%%
+title = Ca Nhạc Thiếu Nhi Vui Nhộn 🌞Bé Khoẻ Bé Ngoan 🎵 Em Bé ...
+url = https://www.youtube.com/watch?v=ZCV14D2HeDA
 
 [dochoihoangthu.com]
 match = -121.1%%
