--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-11 08:01:27
+lastsearch = 2024-07-11 13:50:03
 
 [shopee.vn]
-match = -14.8%%
-title = Chiếu điều hòa (không kèm vỏ gối) sợi mây 2 lớp chất ...
-url = https://shopee.vn/Chiếu-điều-hòa-(không-kèm-vỏ-gối)-sợi-mây-2-lớp-chất-lượng-cao-Minh-Nhật-–-Sang-trọng-mềm-mại-thoáng-mát-i.319365577.9030851250
+match = -18.5%%
+title = Chiếu điều hoà, ga giường cao su non không bí lưng ...
+url = https://shopee.vn/Chiếu-điều-hoà-ga-giường-cao-su-non-không-bí-lưng-HÀNG-LOẠI-1(TẶNG-2-VỎ-GỐI)-i.49163646.20104275799
 
 [demxanh.com]
 match = 14.8%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [kyoryo.vn]
 match = -40.7%%
