--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-11 12:31:57
+lastsearch = 2024-07-11 13:45:51
 
 [www.cms.gov]
 match = 4.5%%
@@ -177,8 +177,8 @@ title = Farm houses for sale in new hampshire [mJROCi]
 url = https://www.nitrc.org/links/?group_id=51&url=https://4835712.detsad147vrn.ru/5487923u6fe43a
 
 [explore.omsystem.com]
-match = -12.5%%
-title = TG-7 - OM System
+match = 0.0%%
+title = 
 url = https://explore.omsystem.com/us/en/tg-7
 
 [www.sohoonline.org]
@@ -327,8 +327,8 @@ title = Purvesh Khatri - Stanford Profiles
 url = https://profiles.stanford.edu/purveshkumar-khatri
 
 [www.mea.gov.in]
-match = 0.0%%
-title = national-archive-new.pdf
+match = -150.0%%
+title = Declassified Files of Ministry of External Affairs in National ...
 url = https://www.mea.gov.in/images/pdf/national-archive-new.pdf
 
 [www.carelonrx.com]
