--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-07-11 12:18:44
+lastsearch = 2024-07-11 14:21:00
 
 [demxanh.com]
 match = 34.5%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
 url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu điều hoà cao su non latex giá tốt Tháng 6, 2024
-url = https://shopee.vn/search?keyword=chiếu điều hoà cao su non latex
+match = -31.0%%
+title = Chiếu điều hoà cao su non in hình 5D siêu mát tặng kèm 2 ...
+url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-in-hình-5D-siêu-mát-tặng-kèm-2-vỏ-gối-i.547721201.15020384769
 
 [nanara.vn]
 match = 34.5%%
