--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-11 11:21:13
+lastsearch = 2024-07-11 14:16:28
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -357,9 +357,9 @@ title = C1 Sport - phường Hóa An vô địch Giải bóng đá các xã ...
 url = https://baodongnai.com.vn/the-thao/202406/c1-sport-phuong-hoa-an-vo-dich-giai-bong-da-cac-xa-phuong-thi-tran-tinh-dong-nai-2024-eef4b09/
 
 [m.facebook.com]
-match = -187.5%%
-title = Hội những nhà đầu tư chứng khoán cá nhân. | Ổ PHIẾU ...
-url = https://m.facebook.com/groups/202428219869114/posts/7719779271467267/
+match = -168.8%%
+title = CẦN XE KÉO CONT 01X20'DC từ CÁT LÁI GIANG NAM - ...
+url = https://m.facebook.com/groups/logisticsvietnam/posts/8429178217116624/
 
 [thanhnien.vn]
 match = -187.5%%
