CI images update

--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-11 12:36:21
+lastsearch = 2024-07-11 14:35:07
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
 url = https://songhong.info/chan-ga-goi-bc16
 
 [demxanh.com]
-match = -19.0%%
-title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
-url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
+match = -52.4%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [foreverbedding.net]
 match = -57.1%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [www.diepxuan.com]
-match = -66.7%%
-title = Chăn ga gối xoa nhung - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-xoa-nhung.html
+match = -81.0%%
+title = Điệp Xuân Bộ ga gối chun xoa 16 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 
 [everon365.vn]
 match = 33.3%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -95.2%%
-title = [giá hủy diệt]Bộ ga gối bo chun bọc đệm,vải cotton poly ...
-url = https://shopee.vn/-giá-hủy-diệt-Bộ-ga-gối-bo-chun-bọc-đệm-vải-cotton-poly-chọn-nhiều-mẫu-kẻ-bao-diêm--i.703206422.15564850603
+match = -47.6%%
+title = ga gối cotton xoa nhung đám cưới hồng mvdv16
+url = https://shopee.vn/search?keyword=ga gối cotton xoa nhung đám cưới hồng mvdv16
 
 [runa.vn]
 match = -4.8%%
@@ -75,4 +75,29 @@ url = https://tiki.vn/search?q=mvdv bộ ga gối xoa nhung m6 hello kitty 4 mà
 match = 19.0%%
 title = Ga Gối Xoa Nhung XN16 1m6 x 2m
 url = https://demgiare.vn/ga-goi-xoa-nhung-xn16-1m6-x-2m.html
+
+[www.sendo.vn]
+match = 9.5%%
+title = BỘ GA GỐI SATIN XOA CAO CẤP - CB307
+url = https://www.sendo.vn/bo-ga-goi-satin-xoa-cao-cap-21304614.html
+
+[www.lazada.vn]
+match = -61.9%%
+title = LZD BỘ GA GỐI COTTON XOA MẪU MON LÁ THƯ | Lazada.vn
+url = https://www.lazada.vn/products/lzd-bo-ga-goi-cotton-xoa-mau-mon-la-thu-i2518149689.html
+
+[m.facebook.com]
+match = 38.1%%
+title = Hội Mua Bán Chăn Ga Gối
+url = https://m.facebook.com/groups/678371195640170/posts/3361605793983350/
+
+[songhonghanoi.vn]
+match = -19.0%%
+title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
+url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
+
+[www.lamchame.com]
+match = -128.6%%
+title = Hà Nội: - Bộ ga gối -- Giá 110k, Vải Nhung xoa không nhăn phai ...
+url = https://www.lamchame.com/forum/threads/bo-ga-goi-gia-110k-vai-nhung-xoa-khong-nhan-phai-mau.1519998/
 
