--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-11 13:48:57
+lastsearch = 2024-07-11 14:31:26
 
 [ninhouse.vn]
 match = -161.5%%
@@ -83,8 +83,8 @@ url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
 match = -153.8%%
-title = vỏ gối kê cổ giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
+title = vỏ gối ngủ giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối ngủ&urlold=vo-goi-ngu-cotton-sateen-mot-mau-1-cap-studio-77-blss159-sage/4841357337532019556/2603260331390754704/ 
 
 [songhong.info]
 match = -161.5%%
