--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-11 12:14:47
+lastsearch = 2024-07-11 14:47:12
 
 [tiki.vn]
 match = 16.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -88.0%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 12 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Qzd1oRmbvFM
+match = -108.0%%
+title = 20240412 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
+url = https://www.youtube.com/watch?v=9v-wyYZ3zkA
 
 [znews.vn]
 match = -40.0%%
@@ -77,9 +77,9 @@ title = 12 du học sinh Việt Nam bị lừa bán dâm ở Đài Loan
 url = https://znews.vn/12-du-hoc-sinh-viet-nam-bi-lua-ban-dam-o-dai-loan-post1387175.html
 
 [m.facebook.com]
-match = -16.0%%
-title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
-url = https://m.facebook.com/groups/266525127391292/
+match = -60.0%%
+title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
+url = https://m.facebook.com/groups/867394263291528/posts/7807974442566774/
 
 [tuoitre.vn]
 match = -56.0%%
