--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-11 09:49:07
+lastsearch = 2024-07-11 14:51:47
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = -253.3%%
+title = Black Kingdom - D2 - Milio E - Cái Ôm Ấm Áp: - Hồi chiêu ...
+url = https://www.facebook.com/photo.php?fbid=822787286517092&id=100063574839369&set=a.647966903999132&locale=mt_MT
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -87,9 +87,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [m.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
+match = -140.0%%
+title = Ways Station Gaming - "T hết tiền rồi ...
+url = https://m.facebook.com/waysstation/photos/t-hết-tiền-rồi-tối-nay-đừng-đi-bar-ra-net-nhé-cho-rẻ-t-chơi-pubg-còn-m-chơi-liên/1163379434092678/
 
 [www.youtube.com]
 match = -206.7%%
