--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-11 14:13:57
+lastsearch = 2024-07-11 14:52:41
 
 [www.youtube.com]
-match = -390.0%%
-title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
-url = https://www.youtube.com/watch?v=dS5JtXqOR-I
+match = -420.0%%
+title = A Date With Ren? Don't Worry About It | 14 Days With You ...
+url = https://www.youtube.com/watch?v=pjfU1xhfUrg
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -117,8 +117,8 @@ title = Division I Men's Collegiate Tennis Mid-Major and Regional ...
 url = https://wearecollegetennis.com/2024/06/07/division-i-mens-collegiate-tennis-mid-major-and-regional-rankings-sponsored-by-tennis-point-june-7th/
 
 [vndb.org]
-match = 0.0%%
-title = 
+match = -290.0%%
+title = 14 Days With You - The Visual Novel Database
 url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
