--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-11 13:48:35
+lastsearch = 2024-07-11 14:49:07
 
 [www.amazon.com]
 match = -309.1%%
@@ -47,9 +47,9 @@ title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
 url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
-match = -109.1%%
-title = 50+ Mẫu Bọc Ghế Da Xe Camry Đẹp
-url = https://bocghedaoto.net/boc-ghe-da-xe-camry
+match = -181.8%%
+title = Bọc ghế da ô tô chất lượng cao Tại Nhà
+url = https://bocghedaoto.net/boc-ghe-da-oto-tai-nha
 
 [ghedagiago.com]
 match = -290.9%%
@@ -132,9 +132,9 @@ title = Ghế da văn phòng
 url = https://noithatthienminh.vn/ghe-da-van-phong/
 
 [akauto.com.vn]
-match = -63.6%%
-title = Bọc ghế da ô tô Mercedes
-url = https://akauto.com.vn/boc-ghe-da-o-to-mercedes
+match = -245.5%%
+title = Bọc Ghế Da Ô Tô Xpander - Da cao cấp - AKauto
+url = https://akauto.com.vn/boc-ghe-da-o-to-xpander
 
 [www.theguardian.com]
 match = -254.5%%
