--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-11 13:49:08
+lastsearch = 2024-07-11 15:22:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -23,8 +23,8 @@ url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
 match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH08
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh08
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH05
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh05
 
 [shopee.vn]
 match = 50.0%%
@@ -72,9 +72,9 @@ title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
 url = https://songhong.info/chan-ga-goi-khong-chan-bc62
 
 [kona.com.vn]
-match = 41.2%%
-title = Bộ ga chần chăn 4 mùa Diamond 188 - kona
-url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-diamond-188
+match = 58.8%%
+title = Bộ ga chần chăn 4 mùa MOC 2 - kona
+url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-moc-2
 
 [www.everonvni.vn]
 match = 23.5%%
