--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-11 11:17:32
+lastsearch = 2024-07-11 15:17:05
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu5WW9BVi&sig=ACfU3U0v8uCwJXeScqwEJi7hFofSIAw0gg&hl=en&sa=X&ved=2ahUKEwi4y-LVkJ6HAxX1g4kEHZkADJMQ6AF6BAgeEAM
+match = -156.2%%
+title = Nizu #3: Bạn bè - Page 14 - Google Books Result
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkLrjjt55&sig=ACfU3U3qoQhcv1Cgy7jOJMHX4AbshWLe_w&hl=en&sa=X&ved=2ahUKEwiJlZCbxp6HAxX0EFkFHQcYB3wQ6AF6BAgYEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -143.8%%
-title = KTX ĐHQG TP.HCM | Bên Mình Mỡ Bán Rồi Nhoá ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2371862273194238/
+match = -168.8%%
+title = CẦN XE KÉO CONT 01X20'DC từ CÁT LÁI GIANG NAM - ...
+url = https://m.facebook.com/groups/logisticsvietnam/posts/8429178217116624/
 
 [shopee.vn]
 match = -75.0%%
