--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-11 13:23:41
+lastsearch = 2024-07-11 15:17:36
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -17,9 +17,9 @@ title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
 url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
 
 [www.lazada.vn]
-match = -136.8%%
-title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
-url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
+match = 21.1%%
+title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
+url = https://www.lazada.vn/products/ga-chong-tham-cao-cap-2m-x-2m2-i1990801523.html
 
 [demgiare.net]
 match = 5.3%%
@@ -32,8 +32,8 @@ title = Ga chống thấm cao cấp Everon
 url = https://www.everonvn.vn/chi-tiet/ga-chong-tham-cao-cap-everon.html
 
 [phuonghoangphat.com]
-match = -84.2%%
-title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= 120k ...
+match = -63.2%%
+title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= ...
 url = https://phuonghoangphat.com/ga-giuong-chinh-hang-le-home sz-1-5m-x-2m-120k-sz-1-8m-x-2m-135k-sz-2m2-x-2m-140k
 
 [suongtuyet.com]
@@ -120,4 +120,9 @@ url = https://www.swagelok.com/downloads/webcatalogs/en/ms-01-140.pdf
 match = -142.1%%
 title = McIlroy trying to move on from devastating US Open loss
 url = https://www.gazettextra.com/sports/national/mcilroy-trying-to-move-on-from-devastating-us-open-loss/article_e97d2d6b-e0f8-54bc-80ed-6aa0e9d0f134.html
+
+[ru9.vn]
+match = -121.1%%
+title = Đệm 2mx2m2, nệm 2m x 2m2 bông ép giá tốt nhất tháng 7
+url = https://ru9.vn/blogs/magazine/dem-bong-ep-2mx2m2
 
