--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-11 14:13:28
+lastsearch = 2024-07-11 15:16:35
 
 [www.reddit.com]
 match = -82.6%%
@@ -410,4 +410,9 @@ url = https://www.cambridge.org/core/journals/european-political-science-review/
 match = 8.7%%
 title = Hurricane FAQ - NOAA/AOML
 url = https://www.aoml.noaa.gov/hrd-faq/
+
+[leetgaming.com]
+match = -8.7%%
+title = Riot Games - Oldal 26 a 116-ből - Leet
+url = https://leetgaming.com/cimke/riot-games/page/26/
 
