CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-11 12:47:16
+lastsearch = 2024-07-11 15:36:12
 
 [hoa18.com]
 match = -84.2%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -142.1%%
-title = Ông Trump thách thức ông Biden tranh biện mở và đấu golf
-url = https://trithucvn.co/the-gioi/ong-trump-thach-thuc-ong-biden-tranh-bien-mo-va-dau-golf.html
+match = -110.5%%
+title = Những loại thực phẩm giải nhiệt tốt nhất vào mùa hè
+url = https://trithucvn.co/suc-khoe/nhung-loai-thuc-pham-giai-nhiet-tot-nhat-vao-mua-he.html
 
 [bptv.vn]
 match = -57.9%%
@@ -170,4 +170,9 @@ url = https://bptv.vn/news/19/159706/be-mac-hoi-thi-ke-chuyen-theo-sach-lan-7
 match = -52.6%%
 title = SỰ KHÁC BIỆT GIỮA LUMEN VÀ LUX LÀ GÌ?
 url = https://eurosuper.com.vn/su-khac-biet-giua-lumen va-lux la-gi-n184.html
+
+[thanhnien.vn]
+match = -173.7%%
+title = Tiết kiệm điện đủ 'tậu' xe SH sau 1 năm làm quản lý khách ...
+url = https://thanhnien.vn/tiet-kiem-dien-du-tau-xe-sh-sau-1-nam-lam-quan-ly-khach-san-185240710113543627.htm
 
