--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-11 14:36:17
+lastsearch = 2024-07-11 15:36:01
 
 [www.facebook.com]
 match = -141.2%%
@@ -143,13 +143,13 @@ url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
 match = -194.1%%
-title = Nine traditional Chinese herbal formulas for the treatment ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
+title = Formononetin: A Review of Its Anticancer Potentials and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6676344/
 
 [books.google.com]
 match = -7.7%%
 title = Index Medicus
-url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SpfdWwtH&sig=ACfU3U06hmxRldYZk0n30c65wfHAx0EBIA&hl=en&sa=X&ved=2ahUKEwi64p7dwJOHAxUTEVkFHfzsD-MQ6AF6BAgkEAM
+url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SpilWCqC&sig=ACfU3U13UjI-odvoDfiqjpTDk-moNO8y0w&hl=en&sa=X&ved=2ahUKEwi36vS4yp6HAxWkFVkFHawwDw0Q6AF6BAgdEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
