--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-11 14:16:28
+lastsearch = 2024-07-11 15:40:45
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Gà ủ rũ chết dần, cứu chữa ra sao? | VTC16
 url = https://www.youtube.com/watch?v=1zJIopY7o00
 
 [books.google.com]
-match = -281.2%%
-title = Tuttle English-Vietnamese Dictionary - Page 276 - Google Books Result
-url = https://books.google.com/books?id=57aHCgAAQBAJ&pg=PA276&lpg=PA276&dq=chieu+lac+soc+16&source=bl&ots=j2w0V0y0sc&sig=ACfU3U1t6gupZNXxGAb9uUMn6E5RxXjmaw&hl=en&sa=X&ved=2ahUKEwjr4Je_kZ6HAxXhkYkEHeSzBHYQ6AF6BAgfEAM
+match = -156.2%%
+title = Nizu #3: Bạn bè - Page 14 - Google Books Result
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+16&source=bl&ots=dtkLrjln75&sig=ACfU3U3K8_dU1oKsTW_PGXHhCrV-aCLnoA&hl=en&sa=X&ved=2ahUKEwjjopPAy56HAxV-MlkFHbgkAE4Q6AF6BAgYEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
