--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-11 13:45:39
+lastsearch = 2024-07-11 15:40:11
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -18,8 +18,8 @@ url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
 match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+title = Blue Bayou (2021)
+url = https://www.imdb.com/title/tt11121664/
 
 [www.etsy.com]
 match = 35.7%%
