--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-11 11:24:48
+lastsearch = 2024-07-11 15:34:22
 
 [demdreamland.vn]
 match = 29.7%%
@@ -12,9 +12,9 @@ title = Đệm Dreamland Chính Hãng Giá Tốt Nhất
 url = https://demdreamland.vn/
 
 [demxanh.com]
-match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+match = 36.8%%
+title = Đệm cao su Vạn Thành Unique 160x200x10
+url = https://demxanh.com/dem-cao-su-van-thanh-unique-160x200x10.html
 
 [www.diepxuan.com]
 match = -277.8%%
