CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-11 04:44:09
+lastsearch = 2024-07-11 16:21:54
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -92,9 +92,9 @@ title = Chợ ma – dấu ấn nghề chiếu
 url = https://baotang.dongthap.gov.vn/di-san-van-hoa/cho-ma-dau-an-nghe-chieu-37.html
 
 [sv.ut.edu.vn]
-match = -125.0%%
-title = mega88 slot game–Apps on Google Play964.91.4
-url = https://sv.ut.edu.vn/newscowtl1.html
+match = -75.0%%
+title = luật poker omaha-App Store5.93.517
+url = https://sv.ut.edu.vn/newsr4ru7ie5.html
 
 [yamaha-motor.com.vn]
 match = -250.0%%
@@ -430,4 +430,9 @@ url = https://phatsuonline.vn/phai-doan-ban-hoang-phap-cung-ban-kinh-te-tai-chin
 match = -87.5%%
 title = Secured Home of atecvietnambranch.com
 url = https://atecvietnambranch.com/
+
+[wildrift.leagueoflegends.com]
+match = -75.0%%
+title = Tốc Chiến - Thông Tin Bản Cập Nhật 5.1
+url = https://wildrift.leagueoflegends.com/vi-vn/news/game-updates/wild-rift-patch-notes-5-1/
 
