--- a/images/ruot-nem-warmdream-150x190x09/config.ini
+++ b/images/ruot-nem-warmdream-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-150x190x09.html
 lastopen = 2024-06-11 06:07:31
 
 [search]
-lastsearch = 2024-07-11 15:40:23
+lastsearch = 2024-07-11 16:16:28
 
 [www.diepxuan.com]
 match = 3.4%%
@@ -32,9 +32,9 @@ title = nac112/nap150 warm up
 url = https://forums.naimaudio.com/topic.php?oid=1566878605246869&coid=159503632588889
 
 [www.audioasylum.com]
-match = -44.4%%
-title = My *bling* LP12...
-url = https://www.audioasylum.com/cgi/vt.mpl?f=vinyl&m=931816
+match = -34.5%%
+title = Vinyl Asylum - Mounting an SME Model 10 tonearm
+url = https://www.audioasylum.com/cgi/vt.mpl?f=vinyl&m=1052622&VT=T
 
 [www.youtube.com]
 match = -58.6%%
