--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-11 05:30:48
+lastsearch = 2024-07-11 16:20:02
 
 [xoptraisan.info]
 match = -64.7%%
@@ -17,9 +17,9 @@ title = thảm nỉ xốp gỗ 60
 url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 
 [thamaulac.com.vn]
-match = -29.4%%
-title = Thảm nỉ ghép 60x60cm Kẻ đỏ, kẻ ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-ke-do-ghi
+match = -41.2%%
+title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
+url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
 
 [vatlieulotsan.com]
 match = -76.5%%
@@ -32,9 +32,9 @@ title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
 url = https://lombom.com/tham-ni-ghep-san-nha/
 
 [trieuchau.com]
-match = -105.9%%
-title = 40*40*10 tấm - Thảm xốp trải sàn vân gỗ Âu Lạc
-url = https://trieuchau.com/vi-vn/1057/28075/Tham-Xop-40x40cm/404010-tam--Tham-xop-trai-san-van-go-Au-Lac
+match = -129.4%%
+title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
+url = https://trieuchau.com/
 
 [www.facebook.com]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = Thảm nỉ trải sàn ghép miếng thương hiệu Tường Lâm
 url = https://demhong.vn/tham-ni-trai-san-ghep-mieng/
 
 [shopee.vn]
-match = -47.1%%
-title = 1 Tấm THẢM XỐP GHÉP VÂN GỖ 60x60cm/tấm
-url = https://shopee.vn/1-Tấm-THẢM-XỐP-GHÉP-VÂN-GỖ-60x60cm-tấm-i.83850460.1824299401
+match = -135.3%%
+title = [Trợ giá] Thảm xốp vân gỗ Cao cấp 1 bộ 6 miếng 60s60cm
+url = https://shopee.vn/product/74195497/1842818990?gsht=tvsIQ01vyExHjKvj
 
 [thamtraisan.info]
 match = -76.5%%
