CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-11 05:30:35
+lastsearch = 2024-07-11 17:21:50
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/Ly-xuyen-tan-chan-chan
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTWKlI_D&sig=ACfU3U3I8FYAJZfmqUuuTF5Sb4owbc95cA&hl=en&sa=X&ved=2ahUKEwitv5CPw52HAxVArokEHRmEBS4Q6AF6BAgVEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTWOoFYy&sig=ACfU3U0Fa6ZtjauYDvbPdWYi8dgF125EPg&hl=en&sa=X&ved=2ahUKEwjr35SM4p6HAxWcrYkEHX2UAl8Q6AF6BAgVEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -255,4 +255,9 @@ url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://x
 match = -7.7%%
 title = {ivjfw} Modifikasi motor honda c80
 url = http://weeklyrentals.com/dorunit.cgi?url=xn--80aaflte4h.xn--p1ai/sXAxDw6fepr
+
+[baomoi.com]
+match = -57.7%%
+title = Hoạt động truyền bá kinh điển Phật giáo ở Đàng Trong ...
+url = https://baomoi.com/hoat-dong-truyen-ba-kinh-dien-phat-giao-o-dang-trong-the-ky-xvi-xviii-noi-dung-va-dac-diem-c49603756.epi
 
