--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-11 14:18:48
+lastsearch = 2024-07-11 17:20:43
 
 [shopee.vn]
 match = -52.4%%
@@ -105,4 +105,9 @@ url = https://noithatcaco.vn/collections/giuong-ngu
 match = -100.0%%
 title = Tấm lót chống thấm trải giường 2 lớp Baby Unmei - Ngẫu Nhiên
 url = https://unmei.com.vn/san-pham/tam-lot-chong-tham-trai-giuong-2-lop-baby-unmei-58x72cm-1-cai-bich-tam-lot-chong-tham-cho-be-hong-ngau-nhien/
+
+[noithattamviet.net]
+match = -85.7%%
+title = Những Mẫu Giường Ngủ 2m x 2m2 Đẹp, Ấn Tượng Dành ...
+url = https://noithattamviet.net/cam-nang/nhung-mau-giuong-ngu-2m-x-2m2-dep-an-tuong-danh-cho-phong-ngu-rong
 
