--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-11 14:13:16
+lastsearch = 2024-07-11 17:15:20
 
 [tiki.vn]
 match = -138.9%%
@@ -32,14 +32,14 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 753 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-753-chinh-hang-cao-cap
+match = -105.6%%
+title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu xanh đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
 match = -61.1%%
@@ -67,9 +67,9 @@ title = Everon Chính hãng Hàn Quốc, Cửa hàng trực tuyến
 url = https://shopee.vn/everonvietnamchinhhang
 
 [draphoangcuong.xim.tv]
-match = -100.0%%
-title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
-url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
+match = -116.7%%
+title = Bộ drap phủ Everon RORBOT (160x200) Giá: 4.027.000 VNĐ
+url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-everon-rorbot-160x200-gia-4-027-000-vnd-sp202152.html
 
 [antbedding.com]
 match = -33.3%%
