--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-11 15:40:45
+lastsearch = 2024-07-11 17:14:03
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,14 +67,14 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -93.8%%
-title = Gà ủ rũ chết dần, cứu chữa ra sao? | VTC16
-url = https://www.youtube.com/watch?v=1zJIopY7o00
+match = -231.2%%
+title = Điểm nóng thế giới 11/7: Mỹ hốt hoảng cuộc họp kín của Nga ...
+url = https://www.youtube.com/watch?v=t_SbqW_GD5E
 
 [books.google.com]
-match = -156.2%%
-title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+16&source=bl&ots=dtkLrjln75&sig=ACfU3U3K8_dU1oKsTW_PGXHhCrV-aCLnoA&hl=en&sa=X&ved=2ahUKEwjjopPAy56HAxV-MlkFHbgkAE4Q6AF6BAgYEAM
+match = -231.2%%
+title = CVCUL NCKT 1 và 2 Sử kí, E-xơ-ra, Nê-hê-mi và Ê-xê-tê - Kì 2
+url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash12p3VIS&sig=ACfU3U0trERykigjXjeCV82evlrWcNVHFg&hl=en&sa=X&ved=2ahUKEwijssOt4J6HAxWo4MkDHQ1sB1QQ6AF6BAgXEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
