--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-11 13:16:53
+lastsearch = 2024-07-11 17:13:17
 
 [www.gov.uk]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -253.3%%
-title = Tony Robbins । 34 Minutes for the NEXT 34 Years of Your LIFE
-url = https://www.youtube.com/watch?v=O9F19ban7A4
+match = -60.0%%
+title = JGLM | New Man 2020 | Session 16
+url = https://www.youtube.com/watch?v=_tpd4v1emkc
 
 [vietjack.com]
 match = -106.7%%
@@ -654,7 +654,7 @@ url = https://www.liverpoolfc.com/
 [www.bernzomatic.com]
 match = -166.7%%
 title = Để học tốt Tiếng Anh 6Giải toán lớp 6 tập 1 trang 16
-url = https://www.bernzomatic.com/appwwcBy/53637.csv
+url = https://www.bernzomatic.com/app8789085
 
 [www.imdb.com]
 match = -86.7%%
